# MetaIO

./: .clang-tidy  .gitattributes  .travis.yml  CMakeLists.txt  CONTRIBUTING.rst  INSTALL.txt  License.txt  README.rst  appveyor.yml  itkMetaIOConfig.h  itkThirdParty.cmake  itk_zlib.h  metaIOConfig.h  vtkMetaIOConfig.h
.circleci/: config.yml
.github/workflows/: ci.yml
itkzlib/: CMakeLists.txt  README.Kitware.txt  deflate.h  gzio.c  itk_zlib_mangle.h  zconf.h  zlib.h  zlibDllConfig.h.in
src/: CMakeLists.txt  localMetaConfiguration.h  metaArray.cxx  metaArray.h  metaArrow.cxx  metaArrow.h  metaBlob.cxx  metaBlob.h  metaCommand.cxx  metaCommand.h  metaContour.cxx  metaContour.h  metaDTITube.cxx  metaDTITube.h  metaEllipse.cxx  metaEllipse.h  metaEvent.h  metaFEMObject.cxx  metaFEMObject.h  metaForm.cxx  metaForm.h  metaGaussian.cxx  metaGaussian.h  metaGroup.cxx  metaGroup.h  metaITKUtils.h  metaImage.cxx  metaImage.h  metaImageStream.cxx  metaImageStream.h  metaImageTypes.h  metaImageUtils.cxx  metaImageUtils.h  metaLandmark.cxx  metaLandmark.h  metaLine.cxx  metaLine.h  metaMatrix.h  metaMesh.cxx  metaMesh.h  (+19 more)
src/tests/: CMakeLists.txt  testMeta10Contour.cxx  testMeta11Form.cxx  testMeta12Array.cxx  testMeta13ImageList.cxx  testMeta14ImageCompressed.cxx  testMeta1Utils.cxx  testMeta2Object.cxx  testMeta3Image.cxx  testMeta4Tube.cxx  testMeta5Blob.cxx  testMeta6Surface.cxx  testMeta7Line.cxx  testMeta8Scene.cxx  testMeta9Landmark.cxx
test/ci/: CacheAndUpdateITK.sh  Dockerfile  appveyor_dashboard.cmake  build.sh  common_dashboard.cmake  run.sh  test.sh  travis_dashboard.cmake
